--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,12 +1,154 @@
-* {
-  font-style: italic;
+HTML {
+  font-size: 18px;
 }
 
-header
+.container {
+  width: 960px;
+  margin: 0 auto;
+  display: flex;
+}
+
+body {
+  font-family: helvetica;
+  color: white;
+}
+
+header,
 footer {
   background-color: black;
 }
 
+#logo {
+  display: flex;
+  align-items: center;
+}
+
+#logo img {
+  height: 1.5rem;
+  margin-left: 0.5rem;
+  margin-right: 1rem;
+}
+
+#header-text h2 {
+  text-transform: uppercase;
+  font-size: 1rem;
+  margin-top: 0.66rem;
+  margin-bottom: 0.66rem;
+}
+
 #main-banner {
   background-image: url("../images/mainbanner.jpeg");
+  background-size: cover;
+  height: 25rem;
 }
+
+#banner-text {
+  background-color: black;
+  width: 20rem;
+  margin-top: 9rem;
+  padding: 2rem 3rem;
+}
+
+#banner-text h1,
+#banner-text h2 {
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+#banner-text h2 {
+  font-size: 1rem;
+  margin-bottom: 0.25rem;
+}
+
+#banner-text h1 {
+  font-size: 2rem;
+}
+
+#main-nav {
+  background-color: firebrick;
+}
+
+#main-nav ul {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  width: 100%;
+}
+
+#main-nav li {
+  display: inline;
+  padding: 0.75rem 0;
+}
+
+#product-grid {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.product-block {
+  width: 30%;
+  border: 4px solid black;
+  border-bottom: none;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.product-block-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 13rem;
+}
+
+.product-block-image img {
+  margin: 2rem 2rem;
+  max-height: 9rem;
+  max-width: 9rem;
+}
+
+.product-block-title {
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.product-block-title h4 {
+  margin: 0.5rem;
+}
+
+#company-details {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 4rem;
+}
+
+.details-block {
+  width: 35%
+}
+
+.details-block-title {
+  background-color: black;
+  padding-top: 1rem;
+  padding-left: 2rem;
+  padding-bottom: 1rem;
+
+}
+
+.details-text p {
+  color: black;
+  margin-top: 0.25rem;
+}
+
+#copyright {
+  display: flex;
+  align-items: center;
+  height: 5rem;
+}
+
+ /* logo, main banner, navigation, product grid, location/ hours, and footer */
